mdcfg (1.27) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * mdcfg now load kernel modules and scan MD devices only if /proc/mdstat did
    not exist before.
  * Remove the attempt to load the ancient module "md".

 -- Jérémy Bobbio <lunar@debian.org>  Thu, 29 May 2008 17:46:31 +0000

mdcfg (1.26) unstable; urgency=low

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Marathi (mr.po) by Sampada
  * Punjabi (Gurmukhi) (pa.po) by Amanpreet Singh Alam

 -- Otavio Salvador <otavio@debian.org>  Thu, 08 May 2008 00:19:34 -0300

mdcfg (1.25) unstable; urgency=low

  * Fix deletion of inactive RAID devices. Closes: #477356.
  * Use /dev/mdX instead of /dev/md/X while version 0 superblocks are default.
    This is also more consistent with the installed system.

  [ Updated translations ]
  * Kurdish (ku.po) by Erdal Ronahi
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Marathi (mr.po)

 -- Frans Pop <fjp@debian.org>  Mon, 28 Apr 2008 08:15:47 +0200

mdcfg (1.24) unstable; urgency=low

  * General whitespace and coding style cleanup.
  * Support deleting a RAID device if only /dev/mdX exists and /dev/md/X
    does not.
  * When enabling existing RAID devices, assemble them using the /dev/md/X
    notation so that both /dev/mdX and /dev/md/X get created. This is more
    consistent with newly created devices.

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Basque (eu.po) by Piarres Beobide
  * Panjabi (pa.po) by Amanpreet Singh Alam

 -- Frans Pop <fjp@debian.org>  Mon, 31 Mar 2008 18:59:43 +0200

mdcfg (1.23) unstable; urgency=low

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Belarusian (be.po) by Hleb Rubanau
  * Bengali (bn.po) by Jamil Ahmed
  * Danish (da.po) by Claus Hindsgaul
  * Esperanto (eo.po) by Serge Leblanc
  * Basque (eu.po) by Piarres Beobide
  * Finnish (fi.po) by Esko Arajärvi
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto