@@ -4,6 +4,9 @@ mdcfg (1.27) UNRELEASED; urgency=low
   * mdcfg now load kernel modules and scan MD devices only if /proc/mdstat did
     not exist before.
   * Remove the attempt to load the ancient module "md".
+  * Factorize md_create_raid1() and md_create_raid5() into md_create_array()
+    which first parameter is the RAID level.
+    Patch from Ryan Niebur.
 
  -- Jérémy Bobbio <lunar@debian.org>  Thu, 29 May 2008 17:46:31 +0000
 
